themes/material/assets/css/main.css
body {
    color: #777777;
    font-family: 'Lato', sans-serif;
}

a,
a:focus,
a:visited,
a:active {
    text-decoration: none;
}

p {
    line-height: 2rem;
}

.container {
    max-width: 900px;
    padding: 20px;
    margin: 0 auto;
    position: relative;
}

.columns {
    margin-left: -.75rem;
    margin-right: -.75rem;
    margin-top: -.75rem;
}

.columns:last-child {
    margin-bottom: -.75rem;
}

@media screen and (min-width: 1280px) {
    .container {
        max-width: 1152px;
        width: 1152px;
    }
}

@media screen and (min-width: 1088px) {
    .container {
        max-width: 960px;
        width: 960px;
    }
}

.margin-top-15rem {
    margin-top: 15rem;
}

.background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url("../images/bg.jpg");
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    z-index: -1;
}

.container {
    max-width: 900px;
    padding: 20px;
}

.card {
    background-color: #fff;
    border-radius: 2px;
    margin-bottom: 20px;
    overflow: hidden;
}

.card-img {
    position: relative;
    height: 300px;
    width: 100%;
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
}

.card-title {
    position: absolute;
    bottom: 0;
    margin: 0 20px;
    color: #fff;
    font-weight: 800;
    font-size: 4rem;
}

.card-title-shader {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+51,000000+100&0+51,0.5+100 */
    background: -moz-linear-gradient(top, rgba(255,255,255,0) 51%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 51%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, rgba(255,255,255,0) 51%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#80000000',GradientType=0 ); /* IE6-9 */
}

.meta {
    padding: 1rem;
}

.avatar {
    float: left;
    height: 50px;
    width: 50px;
    margin-right: 1rem;
}

.avatar img {
    width: 100%;
    border-radius: 50%;
}

.author-date {
    height: 50px;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: space-between;
    -ms-flex-line-pack: justify;
    align-content: space-between;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
}

.author,
.date {
    color: #777777;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}

.card-body {
    padding: 1rem;
}

.card-text {
    color: #777777;
    margin: 10px 0;
}

.card-body-post {
    padding: 3rem 10rem;
}

@media screen and (max-width: 425px) {
    .card-body-post {
        padding: 3rem 1rem;
    }
}

.card-comments {
    padding: 2rem;
    background-color: #333333;
}

.post-navigation {
    position: relative;
    width: 100%;
    height:30px;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: space-between;
    -ms-flex-line-pack: justify;
    align-content: space-between;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
}

.post-prev,
.post-next {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    transition: background-color 0.2s;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}

.post-prev .tooltiptext,
.post-next .tooltiptext {
    visibility: hidden;
    min-width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    top: 0;
}

.post-prev .tooltiptext {
    left: 40px;
}

.post-next .tooltiptext {
    right: 40px;
}

.post-prev .tooltiptext::after {
    content: " ";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent black transparent transparent;
}

.post-next .tooltiptext::after {
    content: " ";
    position: absolute;
    top: 50%;
    left: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent transparent black;
}

.post-prev:hover .tooltiptext,
.post-next:hover .tooltiptext {
    visibility: visible;
}

.arrow-back {
    position: absolute;
    top: 20px;
    left: 20px;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    transition: background-color 0.2s;
}

.arrow-back:hover,
.post-prev:hover,
.post-next:hover {
    background-color: rgba(255,255,255,0.5);
}

.arrow-back a,
.post-prev a,
.post-next a {
    color: white;
    width: 30px;
    height: 30px;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-content: center;
    -ms-flex-line-pack: center;
    align-content: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.arrow-back i,
.post-prev i,
.post-next i {
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    text-align: center;
}

pre {
    border-radius: 4px;
}

blockquote {
    position: relative;
}

blockquote:before {
    content: "";
    position: absolute;
    height: calc(100% + 2rem);
    width: 5px;
    left: -40px;
    top: -1rem;
    background-color: #333333;
    border-radius: 4px;
}

